# birdy_bird

./: Cargo.toml  README.md
.cargo/: config.toml
src/: animaton.rs  bird.rs  cam.rs  game.rs  main.rs  obstacle.rs  ui.rs  world.rs
