[package]
name = "birdy_bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "*", features = ["dynamic_linking"]}
bevy-inspector-egui = { version = "*", features = ["highlight_changes"] }
bevy_easings = "*"
rand = "*"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not >
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
