[package]
name = "birdy_bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "*", features = ["dynamic_linking"]}
rand = "*"

[profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not >
[profile.dev.package."*"]
opt-level = 3



